...
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MovieCotalogue.PopupOverlay" />

            <ImageView
                android:id="@+id/image_poster_detail"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/foto_untuk_movie_detail"
                tools:src="@tools:sample/avatars" />
...
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_share" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/floating_action_button_untuk_share"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|center"
...
